--- a/01-ASP_NET_Core/AzureADB2C/AzureADB2C/AzureADB2C.csproj
+++ b/01-ASP_NET_Core/AzureADB2C/AzureADB2C/AzureADB2C.csproj
@@ -11,4 +11,6 @@
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.25.3" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
