Cambio la configuración del servicio para leer el token de b2c.

--- a/01-ASP_NET_Core/AzureADB2C/AzureADB2C/appsettings.json
+++ b/01-ASP_NET_Core/AzureADB2C/AzureADB2C/appsettings.json
@@ -1,11 +1,13 @@
 {
   "AzureB2C": {
-    "Instance": "https://login.microsoftonline.com/",
+    "Instance": "https://solissonline.b2clogin.com",
+    //"Instance": "https://login.microsoftonline.com/",
     "Domain": "solissonline.onmicrosoft.com",
     "ClientId": "3b0c624f-1a75-4c24-897a-bfd66c26d9f7",
     "TenantId": "common",
-    //"TenantId": "906c2319-3229-4ac2-9f7d-4ee61d4698dc",
-    "CallbackPath": "/signin-oidc"
+    //"CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath": "/signout/B2C_1_SIGN_IN",
+    "SignUpSignInPolicyId": "B2C_1_SIGN_IN"
   },
   "Logging": {
     "LogLevel": {
