--- a/02-ReactB2C/package.json
+++ b/02-ReactB2C/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.37.1",
+    "@azure/msal-react": "^1.5.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
