--- a/02-ReactB2C/package.json
+++ b/02-ReactB2C/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@azure/msal-browser": "^2.37.1",
     "@azure/msal-react": "^1.5.8",
+    "bootstrap": "^5.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
